Edge  home page gap fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
@@ -36,3 +36,6 @@ p {
     overflow: hidden;
     color: black;
 }
+.center-fix{
+    float:left;
+}
